fixed horizontal scroll at mobile layouts

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -28,12 +28,12 @@
 }
 
 .container {
-  width: 100%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 @media (min-width: 475px) {
